ajout d'un print

--- a/2023_09_12.ipynb
+++ b/2023_09_12.ipynb
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "cf1f0d9a",
    "metadata": {},
    "outputs": [
@@ -845,12 +845,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.30000000000000004\n"
+      "0.30000000000000004\n",
+      "0.3\n"
      ]
     }
    ],
    "source": [
-    "print(0.1+0.2)"
+    "print(0.1 + 0.2)\n",
+    "\n",
+    "print(round(0.1 + 0.2,2))"
    ]
   }
  ],
