--- a/2023_09_12.ipynb
+++ b/2023_09_12.ipynb
@@ -5,7 +5,7 @@
    "id": "05909184",
    "metadata": {},
    "source": [
-    "# Exercices du 12/09/2023"
+    "# Exercices python du 12/09/2023"
    ]
   },
   {
@@ -20,20 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 27,
    "id": "7b909a26",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.2\n",
-      "Les nombres sont :\n",
-      "1\n",
-      "2\n"
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Naïm Bentoumi\\Desktop\\simplon_datai_2025\\2023_09_12.ipynb Cell 3\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Na%C3%AFm%20Bentoumi/Desktop/simplon_datai_2025/2023_09_12.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m b \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m()\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Na%C3%AFm%20Bentoumi/Desktop/simplon_datai_2025/2023_09_12.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m a \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(\u001b[39mfloat\u001b[39;49m(b\u001b[39m.\u001b[39;49mreplace(\u001b[39m\"\u001b[39;49m\u001b[39m,\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m\"\u001b[39;49m)))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Na%C3%AFm%20Bentoumi/Desktop/simplon_datai_2025/2023_09_12.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mif\u001b[39;00m(a \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Na%C3%AFm%20Bentoumi/Desktop/simplon_datai_2025/2023_09_12.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mN\u001b[39m\u001b[39m'\u001b[39m\u001b[39mest pas un nombre positif\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
      ]
     }
    ],
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "0a9acd77",
    "metadata": {},
    "outputs": [
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "39aa4019",
    "metadata": {},
    "outputs": [
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "cae456d9",
    "metadata": {},
    "outputs": [
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "872445c0",
    "metadata": {
     "scrolled": true
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "6c79b81a",
    "metadata": {},
    "outputs": [
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "e475a727",
    "metadata": {},
    "outputs": [
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "a98723c3",
    "metadata": {},
    "outputs": [
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "id": "43df56b2",
    "metadata": {},
    "outputs": [
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "id": "f520bec3",
    "metadata": {},
    "outputs": [
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "c4b4edb8",
    "metadata": {},
    "outputs": [
@@ -410,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "679fda7c",
    "metadata": {},
    "outputs": [
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "id": "bc9a4814",
    "metadata": {},
    "outputs": [
@@ -475,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "id": "22173223",
    "metadata": {},
    "outputs": [
@@ -506,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "0b18a0d4",
    "metadata": {},
    "outputs": [
@@ -537,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "id": "56bf9751",
    "metadata": {},
    "outputs": [
@@ -576,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "id": "8019c108",
    "metadata": {},
    "outputs": [
@@ -629,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a0a08430",
    "metadata": {},
    "outputs": [
@@ -678,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "id": "ef0d8f26",
    "metadata": {},
    "outputs": [
@@ -716,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "id": "3c9c92f0",
    "metadata": {},
    "outputs": [
@@ -757,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "id": "f55edd91",
    "metadata": {},
    "outputs": [
@@ -799,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "307f7737",
    "metadata": {},
    "outputs": [
@@ -837,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "cf1f0d9a",
    "metadata": {},
    "outputs": [
@@ -855,6 +856,311 @@
     "\n",
     "print(round(0.1 + 0.2,2))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b6a709f",
+   "metadata": {},
+   "source": [
+    "# Exercice Numpy 12/09/2023\n",
+    "\n",
+    "### Exercice 1\n",
+    "\n",
+    "Créez un tableau NumPy contenant les entiers de 1 à 10 (inclus)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1b375c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.arange(1,11)\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faaedf5a",
+   "metadata": {},
+   "source": [
+    "### Exercice 2\n",
+    "\n",
+    "Créez un tableau NumPy contenant 5 valeurs flottantes générées aléatoirement entre 0 et 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57fbd441",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.1237389  0.05487353 0.66126792 0.69333821 0.83644635]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rng = np.random.rand(5)\n",
+    "print(rng)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c14e13ae",
+   "metadata": {},
+   "source": [
+    "### Exercice 3\n",
+    "\n",
+    "Créez une fonction qui prend un tableau NumPy en entrée et renvoie la somme de ses éléments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e30cab06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "def Somme_numpy(a):\n",
+    "    b = sum(a)\n",
+    "    print(b)\n",
+    "\n",
+    "Somme_numpy(np.arange(1,11))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64d07efb",
+   "metadata": {},
+   "source": [
+    "### Exercice 4\n",
+    "\n",
+    "Créez une fonction qui prend deux tableaux NumPy en entrée et renvoie le produit scalaire de ces deux tableaux (dot product)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "1d198e83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3])\n",
+    "b = np.array([4,5,6])\n",
+    "\n",
+    "def produit_scalaire(a, b):\n",
+    "    if len(a) != len(b):\n",
+    "        print(\"Produit scalaire impossible\")\n",
+    "    j = len(b)-1\n",
+    "    i = 0\n",
+    "    c = 0\n",
+    "    while j != -1:\n",
+    "        c += a[i]*b[j]\n",
+    "        i += 1\n",
+    "        j -= 1\n",
+    "    \n",
+    "    print(c)\n",
+    "\n",
+    "produit_scalaire(a,b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee203125",
+   "metadata": {},
+   "source": [
+    "### Exercice 5\n",
+    "\n",
+    "Créez une fonction qui prend un tableau NumPy en entrée et renvoie un nouveau tableau contenant uniquement les éléments uniques du tableau d'origine."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "dd371ab3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def Element_unique(a):\n",
+    "    suppr = []\n",
+    "    for i in range(len(a)):\n",
+    "        for j in range(len(a)):\n",
+    "            if i == j:\n",
+    "                continue\n",
+    "            elif (a[i] == a[j]):\n",
+    "                suppr.append(i)\n",
+    "                break\n",
+    "    b = []\n",
+    "    for k in range(len(a)):\n",
+    "        if k in suppr:\n",
+    "            continue\n",
+    "        else : \n",
+    "            b.append(a[k])\n",
+    "    print(b)\n",
+    "\n",
+    "Element_unique(np.array([1,2,3,4,5,6,7,8,9,10,10,10]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fa02d53",
+   "metadata": {},
+   "source": [
+    "### Exercice 6\n",
+    "\n",
+    "Créez une fonction qui prend un tableau NumPy en entrée et renvoie un nouveau tableau contenant les éléments triés par ordre croissant."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "f33f85fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 4, 5, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def Croissant(a):\n",
+    "    b = []\n",
+    "    already = []\n",
+    "    for k in range(len(a)):\n",
+    "        min = -1\n",
+    "        j = 0\n",
+    "        for i in range(len(a)):\n",
+    "\n",
+    "            if min < 0:\n",
+    "                if i in already:\n",
+    "                   continue \n",
+    "                else :\n",
+    "                    min = a[i]\n",
+    "                    j = i\n",
+    "            elif min >= a[i]:\n",
+    "                if j == i:\n",
+    "                    continue\n",
+    "                elif i in already:\n",
+    "                   continue \n",
+    "                else:\n",
+    "                    min = a[i]\n",
+    "                    j = i\n",
+    "        already.append(j)\n",
+    "        b.append(min)\n",
+    "    print(b)\n",
+    "\n",
+    "Croissant([9,7,2,4,5,8,1,4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3604bfd8",
+   "metadata": {},
+   "source": [
+    "### Exercice 7\n",
+    "\n",
+    "Créez une fonction qui prend un tableau NumPy en entrée et renvoie la moyenne, la médiane et l'écart type de ses éléments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "0a333f66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "171\n"
+     ]
+    }
+   ],
+   "source": [
+    "def moy_med_ecart(a):\n",
+    "    moy = sum(a)/len(a)\n",
+    "    med = #Croissant + len(a)/2 arrondis vers le haut\n",
+    "    ecart = #racine de la ((somme de (a[i] - moyenne))/len(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33a1f40f",
+   "metadata": {},
+   "source": [
+    "### Exercice 8\n",
+    "\n",
+    "Créez une fonction qui prend un tableau NumPy en entrée et renvoie un nouveau tableau où tous les éléments inférieurs à 5 sont remplacés par 0 et tous les éléments supérieurs ou égaux à 5 sont remplacés par 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef1d199b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0096dc88",
+   "metadata": {},
+   "source": [
+    "### Exercice 9\n",
+    "\n",
+    "Créez un tableau NumPy 2D de taille 3x3 contenant des valeurs entières générées aléatoirement entre 1 et 10."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a0e580c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
