Vrai exercice numpy

--- a/2023_09_12.ipynb
+++ b/2023_09_12.ipynb
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "57fbd441",
    "metadata": {},
    "outputs": [
@@ -911,13 +911,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.1237389  0.05487353 0.66126792 0.69333821 0.83644635]\n"
+      "[0.99447353 0.53260439 0.36753201 0.49610434 0.49835665]\n"
      ]
     }
    ],
    "source": [
-    "rng = np.random.rand(5)\n",
-    "print(rng)"
+    "a = np.random.rand(5)\n",
+    "print(a)"
    ]
   },
   {
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "1d198e83",
    "metadata": {},
    "outputs": [
@@ -972,7 +972,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28\n"
+      "32\n"
      ]
     }
    ],
@@ -983,17 +983,41 @@
     "def produit_scalaire(a, b):\n",
     "    if len(a) != len(b):\n",
     "        print(\"Produit scalaire impossible\")\n",
-    "    j = len(b)-1\n",
+    "    j = 0\n",
     "    i = 0\n",
     "    c = 0\n",
-    "    while j != -1:\n",
+    "    while j != len(b):\n",
     "        c += a[i]*b[j]\n",
     "        i += 1\n",
-    "        j -= 1\n",
+    "        j += 1\n",
     "    \n",
     "    print(c)\n",
     "\n",
     "produit_scalaire(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "39fa0745",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3])\n",
+    "b = np.array([4,5,6])\n",
+    "\n",
+    "def produit_scalaire2(a, b):\n",
+    "    print(np.dot(a,b))\n",
+    "\n",
+    "produit_scalaire2(a,b)"
    ]
   },
   {
@@ -1096,6 +1120,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "83ddc104",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 4 4 5 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def Croissant2(a):\n",
+    "    \n",
+    "    print(np.sort(a))\n",
+    "\n",
+    "a = np.array([9,7,2,4,5,8,1,4])\n",
+    "Croissant2(a)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3604bfd8",
    "metadata": {},
@@ -1107,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "0a333f66",
    "metadata": {},
    "outputs": [
@@ -1115,15 +1164,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "171\n"
+      "2.6457513110645907\n",
+      "la moyenne est de : 5.0\n",
+      "la médiane est : 4.5\n",
+      "l'ecart-type est de : 2.6457513110645907\n"
      ]
     }
    ],
    "source": [
     "def moy_med_ecart(a):\n",
-    "    moy = sum(a)/len(a)\n",
-    "    med = #Croissant + len(a)/2 arrondis vers le haut\n",
-    "    ecart = #racine de la ((somme de (a[i] - moyenne))/len(a))"
+    "    moy = np.mean(a)\n",
+    "    med = np.median(a)\n",
+    "    ecart = np.nanstd(a)\n",
+    "    print(np.var(a) ** (1/2))\n",
+    "    print(\"la moyenne est de : \" + str(moy) + \"\\nla médiane est : \" + str(med) + \"\\nl'ecart-type est de : \" + str(ecart))\n",
+    "\n",
+    "moy_med_ecart(np.array([9,7,2,4,5,8,1,4]))"
    ]
   },
   {
@@ -1138,11 +1194,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "ef1d199b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 0. 0. 1. 1. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def zero_un(a):\n",
+    "    b = np.empty(len(a),dtype=float)\n",
+    "    for i in range(len(a)):\n",
+    "        if a[i] < 5:\n",
+    "            b[i] = 0\n",
+    "        else:\n",
+    "            b[i] = 1\n",
+    "    print(b)\n",
+    "\n",
+    "zero_un(np.array([9,7,2,4,5,8,1,4]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1156,11 +1231,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "7a0e580c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  2  3]\n",
+      " [ 3  4  2]\n",
+      " [ 2  7 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.random.randint(1, 11, size=(3, 3))\n",
+    "print(a)"
+   ]
   }
  ],
  "metadata": {
