--- a/2023_09_12.ipynb
+++ b/2023_09_12.ipynb
@@ -20,21 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "7b909a26",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Naïm Bentoumi\\Desktop\\simplon_datai_2025\\2023_09_12.ipynb Cell 3\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Na%C3%AFm%20Bentoumi/Desktop/simplon_datai_2025/2023_09_12.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m b \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m()\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Na%C3%AFm%20Bentoumi/Desktop/simplon_datai_2025/2023_09_12.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m a \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(\u001b[39mfloat\u001b[39;49m(b\u001b[39m.\u001b[39;49mreplace(\u001b[39m\"\u001b[39;49m\u001b[39m,\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m\"\u001b[39;49m)))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Na%C3%AFm%20Bentoumi/Desktop/simplon_datai_2025/2023_09_12.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mif\u001b[39;00m(a \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Na%C3%AFm%20Bentoumi/Desktop/simplon_datai_2025/2023_09_12.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mN\u001b[39m\u001b[39m'\u001b[39m\u001b[39mest pas un nombre positif\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Les nombres sont :\n",
+      "1\n",
+      "2\n"
      ]
     }
    ],
