Ajoute d'une alternative pour le 5 et 8

--- a/2023_09_12.ipynb
+++ b/2023_09_12.ipynb
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "ef1d199b",
    "metadata": {},
    "outputs": [
@@ -1200,13 +1200,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1. 1. 0. 0. 1. 1. 0. 0.]\n"
+      "[1 1 0 0 1 1 0 0]\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "def zero_un(a):\n",
-    "    b = np.empty(len(a),dtype=float)\n",
+    "    b = np.empty(len(a),dtype=int)\n",
     "    for i in range(len(a)):\n",
     "        if a[i] < 5:\n",
     "            b[i] = 0\n",
@@ -1214,7 +1216,7 @@
     "            b[i] = 1\n",
     "    print(b)\n",
     "\n",
-    "zero_un(np.array([9,7,2,4,5,8,1,4]))"
+    "zero_un(np.array([9.2,7,2,4,5,8,1,4]))"
    ]
   },
   {
