Ajout de nouvelle possibilité

--- a/2023_09_12.ipynb
+++ b/2023_09_12.ipynb
@@ -1064,6 +1064,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "bbdd0cc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def Element_unique2(a):\n",
+    "    b = np.unique(a)\n",
+    "    print(b)\n",
+    "\n",
+    "Element_unique2(np.array([1,2,3,4,5,6,7,8,9,10,10,10]))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7fa02d53",
    "metadata": {},
@@ -1217,6 +1239,28 @@
     "    print(b)\n",
     "\n",
     "zero_un(np.array([9.2,7,2,4,5,8,1,4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "aa9a5b54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 1 1 1 1 1 1 1 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def zero_un2(a):\n",
+    "    b = np.greater_equal(a,5)*1\n",
+    "    print(b)\n",
+    "\n",
+    "zero_un2(np.array([1,2,3,4,5,6,7,8,9,10,10,10]))"
    ]
   },
   {
